--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) 调试源码-输入输出重定向",
+            "name": "Python 调试程序-输入输出重定向",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "<",
+                "${fileBasenameNoExtension}_in.txt",
+                ">",
+                "${fileBasenameNoExtension}_out.txt"
+            ]
+        },
+        {
+            "name": "(gdb) 调试程序-输入输出重定向",
             "type": "cppdbg",
             "preLaunchTask": "C++: gcc 编译测试版",
             "request": "launch",
@@ -34,6 +47,5 @@
                 }
             ]
         }
-
     ]
 }
